# PECWMA

./: CMakeLists.txt  README.md  clang_env.txt  code_style.sh  pecma.json
src/: CMakeLists.txt  Makefile  leftcnt.sh  pecma_config.json  pecwma.cpp  resultcnt.sh  ui.py
src/ast/: CMakeLists.txt  Makefile  blockrule.cpp  consumer.cpp  ese.cpp  mutator.cpp  mutator.h
src/common/: common.h
src/ops/: ABV.cpp  AOR.cpp  BOR.cpp  CMakeLists.txt  CSR.cpp  LOR.cpp  LVR.cpp  MCD.cpp  ROR.cpp  ROV.cpp  SOR.cpp  STDC.cpp  UOI.cpp  UOR.cpp  operator.cpp  operator.h
src/rewriter/: CMakeLists.txt  pecma.cpp  pecma.h
